# AF-guided-MR

./: README.md  Readme_v2.txt  environment.yml  gui.py  pyproject.toml  run_afmr.py
resources/: fetch_test_set.py  fetch_uniprots.py
src/: gui.py
src/af_guided_mr/: af_cluster.py  cli.py  colabfold.py  data_manager.py  job_monitor.py  main.py  molecular_replacement.py  pdb_manager.py  pipeline.py  refine.py  sequence_manager.py  utils.py
src/af_guided_mr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/af_guided_mr/crystallography/: Autobuild.py  MolecularReplacement.py  Refine.py  Validation.py
src/af_guided_mr/data_management/: DataManager.py  PDBManager.py  SequenceManager.py
src/af_guided_mr/structure_prediction/: AF_cluster.py  ColabFold.py
src/af_guided_mr/utils/: JobMonitor.py  utilities.py
